force-app/main/default/objects/Transition_Matrix__c/Transition_Matrix__c.object-meta.xml
<CustomObject>
    <label>Transition Matrix</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Transition Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transition Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <fields>
        <fullName>From_State__c</fullName>
        <label>From State</label>
        <type>Text</type>
        <length>80</length>
        <required>true</required>
    </fields>
    
    <fields>
        <fullName>To_State__c</fullName>
        <label>To State</label>
        <type>Text</type>
        <length>80</length>
        <required>true</required>
    </fields>
    
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>8</scale>
        <required>true</required>
    </fields>
    
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <required>true</required>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>Matrix_Version__c</fullName>
        <label>Matrix Version</label>
        <type>Text</type>
        <length>50</length>
    </fields>
    
    <fields>
        <fullName>Last_Calculated__c</fullName>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    
    <fields>
        <fullName>Transition_Count__c</fullName>
        <label>Transition Count</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    
    <fields>
        <fullName>Total_From_State__c</fullName>
        <label>Total From State</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    
    <fields>
        <fullName>Data_Points__c</fullName>
        <label>Data Points</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    
    <fields>
        <fullName>Confidence_Score__c</fullName>
        <label>Confidence Score</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>3</scale>
    </fields>
    
</CustomObject>