force-app/main/default/objects/Transition_Matrix__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>3</scale>
    <description>Confidence score for the transition probability (0.0 to 1.0)</description>
    <inlineHelpText>Statistical confidence in the calculated transition probability</inlineHelpText>
</CustomField>