force-app/main/default/objects/Transition_Matrix__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>The customer type this transition matrix applies to (B2C or B2B)</description>
    <inlineHelpText>Customer type determines the appropriate state space for attribution calculations</inlineHelpText>
</CustomField>