force-app/main/default/objects/Transition_Matrix__c/fields/Data_Points__c.field-meta.xml
<CustomField>
    <fullName>Data_Points__c</fullName>
    <label>Data Points</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Number of customer journeys used to calculate this transition</description>
    <inlineHelpText>Sample size indicator for transition probability reliability</inlineHelpText>
</CustomField>