force-app/main/default/objects/Transition_Matrix__c/fields/From_State__c.field-meta.xml
<CustomField>
    <fullName>From_State__c</fullName>
    <label>From State</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>The source state in the Markov Chain transition (e.g., START, Google_Ads_Awareness, Email_Marketing_Consideration)</description>
    <inlineHelpText>Source state in the customer journey transition sequence</inlineHelpText>
</CustomField>