force-app/main/default/objects/Transition_Matrix__c/fields/Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated__c</fullName>
    <label>Last Calculated</label>
    <type>DateTime</type>
    <description>Timestamp when this transition matrix was last calculated</description>
    <inlineHelpText>Used to determine matrix freshness and trigger recalculation</inlineHelpText>
</CustomField>