force-app/main/default/objects/Transition_Matrix__c/fields/Matrix_Version__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Version__c</fullName>
    <label>Matrix Version</label>
    <type>Text</type>
    <length>50</length>
    <description>Version identifier for the transition matrix calculation (timestamp-based)</description>
    <inlineHelpText>Unique identifier for each matrix calculation batch</inlineHelpText>
</CustomField>