force-app/main/default/objects/Transition_Matrix__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>8</scale>
    <required>true</required>
    <description>The probability of transitioning from the source state to the destination state (0.0 to 1.0)</description>
    <inlineHelpText>Transition probability calculated from historical customer journey data</inlineHelpText>
</CustomField>