force-app/main/default/objects/Transition_Matrix__c/fields/To_State__c.field-meta.xml
<CustomField>
    <fullName>To_State__c</fullName>
    <label>To State</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>The destination state in the Markov Chain transition (e.g., CONVERSION, NULL, Facebook_Ads_Interest)</description>
    <inlineHelpText>Destination state in the customer journey transition sequence</inlineHelpText>
</CustomField>