force-app/main/default/objects/Transition_Matrix__c/fields/Total_From_State__c.field-meta.xml
<CustomField>
    <fullName>Total_From_State__c</fullName>
    <label>Total From State</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Total number of times the source state was observed</description>
    <inlineHelpText>Denominator used in probability calculation</inlineHelpText>
</CustomField>