force-app/main/default/objects/Transition_Matrix__c/fields/Transition_Count__c.field-meta.xml
<CustomField>
    <fullName>Transition_Count__c</fullName>
    <label>Transition Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>The raw count of transitions observed between these states</description>
    <inlineHelpText>Number of actual transitions observed in the training data</inlineHelpText>
</CustomField>